fixes spacing

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,9 +5,9 @@
     width: auto;
 }
 .logobox {
-    height: 460px;
+    height: 420px;
     width: 100%;
-    background-image: url("/assets/images/roundBan.png");
+    background-image: url("/assets/images/40Banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
