--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,6 @@
 .festTitle {
-    height: 130px;
-    background-image: url("/assets/images/yellowHeader.png");
-    background-size: 63% 100%;
+    background-image: url("/assets/images/orange40.png");
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    padding-top: 23px;
-    margin-bottom: 15px;
 }
