--- a/src/app/sponsors/sponsors.component.scss
+++ b/src/app/sponsors/sponsors.component.scss
@@ -1,6 +1,11 @@
 .sponsorsHD {
+    width: 280px;
     background-image: url("/assets/images/pinkredHD.png");
-    background-size: 20% 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
+}
+.kp {
+    max-height: 100%;
+    max-width: 100%;
 }
